# ParComp

./: .gitignore  CMakeLists.txt  GNUmakefile  README.md  build_efl.sh  build_jacobi.sh  build_parallel_example.sh  build_test.sh  build_vect_example.sh  efl.l  efl.y  efl2f90.c  efl2f90.sh  efl_ir.h  jacobi.efl  jacobi.f90  jacobi.in  parallel_example.efl  parallel_example.in  test.efl  test.in  vect_example.efl  vect_example.f  vect_example.f90  vect_example.in
scc/: CMakeLists.txt  GNUmakefile  graphstreamer.c  graphstreamer.h  scc  scc.c  scc.h  scc.in  scc_structures.c  scc_structures.h
scc/src/: graphstreamer.c  graphstreamer.h  scc.c  scc.h  scc_structures.c  scc_structures.h
